k8s/base/notify/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notify
spec:
  type: ClusterIP
  selector:
    app: notify
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
